Remodeled some models, added reviewing permissions

--- a/project_s/templates/simple_article_list.html
+++ b/project_s/templates/simple_article_list.html
@@ -39,7 +39,7 @@
             {% for article in articles %}
             <div class="card bg-transparent mb-2 border-dark" style="max-height: 15rem;">
                 <div class="card-header text-justify">
-                    <h5><a href="{% url 'Article_detail' article.pk %}">{{article.name}}</a></h5>
+                    <h5><a href="{% url 'Article_detail' article.pk %}"> SIMPLIFIED - {{article.article.name}}</a></h5>
                     <p class="text-light"> 
                         {{article.first_author}}, {{article.PI}} 
                     </p>
