--- a/project_s/static/CSS/cover.css
+++ b/project_s/static/CSS/cover.css
@@ -31,11 +31,11 @@ body {
 }
 
 body {
-  display: -ms-flexbox;
+  /* display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
   -ms-flex-pack: center;
-  -webkit-box-pack: center;
+  -webkit-box-pack: center; */
   justify-content: center;
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
@@ -43,7 +43,7 @@ body {
 }
 
 .cover-container {
-  max-width: 52em;
+  max-width: 75em;
 }
 
 
@@ -107,4 +107,12 @@ body {
  */
 .mastfoot {
   color: rgba(255, 255, 255, .5);
+}
+
+.vertical-center {
+  min-height: 100%;
+  min-height: 100%;
+
+  display:flex;
+  align-items: center;
 }
