--- a/project_s/templates/base.html
+++ b/project_s/templates/base.html
@@ -13,27 +13,32 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body class="text-center">
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-        <header class="masthead mb-auto">
-          <div class="inner">
-            <h3 class="masthead-brand">Project S</h3>
-            <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link active" href="{% url 'home' %}">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="{% url 'login' %}">Log In</a>
-            </nav>
-          </div>
-        </header>
+
+
+    <div class="container d-flex p-3  mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand">Project S</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
+            <a class="nav-link" href="{% url 'Article_list' %}">Articles</a>
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="#">{{user.username}}</a>
+            {% else %}
+            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+            {% endif %}
+          </nav>
+        </div>
+      </header>
+    </div>
+      
         {% block cover %}
         {% endblock cover %}
+        
         {% block content %}
-      {% endblock content %}
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        </div>
-      </footer>
-    </div>
+        {% endblock content %}
+      
+    
       
 
     <!-- Optional JavaScript -->
