--- a/project_s/templates/index.html
+++ b/project_s/templates/index.html
@@ -1,15 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
-
     {% block cover %}
-      <main role="main" class="inner cover">
+    <div class="container d-flex  h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <!-- <div class="inner">
+          <h3 class="masthead-brand">Project S</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="{% url 'home' %}">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+          </nav>
+        </div> -->
+      </header>
+      <main role="main " class="inner cover">
         <h1 class="cover-heading">Science Simplified</h1>
         <p class="lead">Project S aims to simplify science. Make an account to see what its all about!</p>
         <p class="lead">
           <a href="{% url 'signup' %}" class="btn btn-lg btn-secondary">Sign Up</a>
         </p>
       </main>
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        </div>
+      </footer>
+  </div>
     {% endblock cover%}
 </html>
