--- a/project_s/templates/simple_article_detail.html
+++ b/project_s/templates/simple_article_detail.html
@@ -43,7 +43,7 @@
             
         </div>
         <div class="col-2">
-            <button class="btn btn-success"> Simplify </button>
+            <button class="btn btn-success"> Original Article </button>
 
         </div>
     </div>
