Remodeled frontend for review pages, and made ckeditor work in templates

--- a/project_s/templates/article_detail.html
+++ b/project_s/templates/article_detail.html
@@ -43,7 +43,7 @@
             
         </div>
         <div class="col-2">
-            <a href="{% url 'Simple_article_detail' simple %}" class="btn btn-success"> SIMPLIFY </a>
+            <a href="{% url 'Selected_simple_articles' id %}" class="btn btn-success"> SIMPLIFY </a>
         </div>
     </div>
 </div>
