--- a/project_s/templates/approver_inbox.html
+++ b/project_s/templates/approver_inbox.html
@@ -7,11 +7,11 @@
 
 
 
-<div class="container-fluid ">
-    <h1 class="text-justify text-white"> Review Inbox </h1>
+<div class="container-fluid">
+    <h1 class="text-justify text-white"> Approver Inbox </h1>
 </div>
 
-<div class="container-fluid m-3 ">
+<div class="container-fluid m-3">
     
     <div class="row">
         <!-- <div class="col-4 bg-transparent">
@@ -21,10 +21,10 @@
                 <button class="btn btn-outline-secondary" type="submit"> Add filter </button>
             </form>
         </div> -->
-        <div class="col-8 ">
+        <div class="col-8">
             {% for article in articles %}
             <div class="row">
-                <div class="card bg-transparent mb-2 shadow-lg" style="width: 60rem;" >
+                <div class="card bg-transparent mb-2 shadow-lg" style="width: 60rem;">
                     <div class="card-header text-justify">
                         <h5><a href="{% url 'Article_detail' article.pk %}">{{article.name}}</a></h5>
                         <p class="text-light"> 
@@ -36,16 +36,15 @@
                             <div class="card-body pt-1 overflow-auto">
                                 <a href="{% url 'reviewing page' submission.pk %}">
                                     <div class="card-text text-justify ">
-                                        <h4>Simplified</h4>
+                                        <h4> Simplified </h4>
                                         <div class="d-flex justify-content-between text-info">
                                             <div>
-                                                Submission by: {{ submission.created_by.username }} 
+                                                Submission by: {{ submission.created_by.username }} pk: {{submission.id}}
                                             </div>
                                             <div>
                                                 Status: {{submission.status}}
                                             </div>
                                         </div>
-                                        
                                     </div>
                                 </a>
                             </div>
