--- a/project_s/templates/reviewer_view.html
+++ b/project_s/templates/reviewer_view.html
@@ -1,18 +1,17 @@
-{% extends 'base.html' %}
-{% load widget_tweaks %}
+{% extends 'review.html' %}
+{% load widget_tweaks%}
 {% block content %}
 
-<div class="container">
-    <h1 class="text-justify">Review</h1>
-</div>
-<div class="container border border-secondary">
+
+<div class="container-fluid border border-secondary">
     <div class="row">
         <div class="col-4">
             <div class="list-group">
+                <h3 class="text-white"> Review Inbox </h3>
                 {% for submission in submissions %}
-                    <a href="{% url 'reviewing page' submission.id %}" class="list-group-item flex-column text-justify bg-transparent {% if submission.id == pk %} active {% endif %}">
+                    <a href="{% url 'reviewing page' submission.id %}" class="list-group-item border  border-secondary flex-column m-3 text-justify bg-transparent {% if submission.id == pk %} active border-white {% endif %}">
                         <div class="d-flex w-100 justify-content-between">
-                            <h5>{{submission.article.name | truncatechars:15}}</h5>
+                            <h5> {{submission.article.name | truncatechars:15}}</h5>
                             
                             <small> X days ago </small>
                         </div>
@@ -22,16 +21,22 @@
             </div>
         </div>
         <div class="col-5">
-            <div class="row justify-content-center">
-                {{form.text.label_tag}}
-                {{current.article.name}}
+            <div class="progress mt-2">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"> 10%</div>
             </div>
             <div class="row justify-content-center">
-                {% render_field form.text class="form-control" %}
+                <br>
+                <br>
+                
+                <h3 class="text-white"> Status: {{current.status}} </h3>
+            </div>
+            <div class="row justify-content-center">
+                
+                {% render_field form.text class="form-control"%}
             </div>
             
         </div>
-        <div class="col-2 ">
+        <div class="col">
             <form method="POST">
                 {% csrf_token %}
                 <!-- <div class="row">
@@ -40,11 +45,16 @@
                 <div class="row">
                     {% render_field form.comments class="form-control" %}
                 </div> -->
-                <div class="row">
+                <div class="row mt-2 ">
                     <div class="col">
-                        
-                        <input type="submit" class="btn bg-transparent btn-success" name="approve" value="Approve">
+                        {% if is_reviewer == True %}
+                        <input type="submit" class="btn bg-transparent btn-success" name="submit" value="Submit for approval">
+                        {% endif %}
+                        {% if is_approver == True %}
+                            <input type="submit" class="btn bg-transparent btn-success" name="approve" value="Approve">
+                        {% endif %}
                         <input type="submit" class="btn bg-transparent btn-primary" name="return_for_review" value="Return for review">
+
                         <!-- <button class="btn btn-block btn-success mr-2"> 
                             Approve 
                         </button><button class="btn btn-block btn-primary">
