--- a/project_s/templates/submitter_inbox.html
+++ b/project_s/templates/submitter_inbox.html
@@ -32,6 +32,7 @@
                         </p>
                     </div>
                     <div class="card-body pt-1 overflow-auto">
+                        <h3 class="text-white">Simplified</h3>
                         <div class="card-text text-justify "> 
                             <div class="d-flex justify-content-between text-info my-2">
                                 <div>
