--- a/project_s/templates/article_list2.html
+++ b/project_s/templates/article_list2.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 {% block content %}
 
 
@@ -6,7 +7,7 @@
 <div class="container">
     <h1 class="text-justify"> Articles </h1>
 </div>
-
+<form method="GET">
 <div class="container p-3">
 
         <div class="row">
@@ -16,15 +17,17 @@
 
             <div class="col-8">
                 <div class="row justify-content-center">
-                    <form action="{% url 'Article_list' %}" method="GET">
+                    
                         <div class="input-group" >
-                                <input class="form-control" type="text" name="q" value={{request.GET.q}}>
+                                
+                                {% render_field filter.form.name class="form-control" %}
+                                <!-- <input class="form-control" type="text" name="q" value={{request.GET.q}}> -->
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary" type="submit"> Search </button>
                                 </div>
                             
                         </div>
-                    </form>
+                    
                 </div>
             </div>
         </div>
@@ -37,10 +40,10 @@
     <div class="row">
         <div class="col-4 bg-transparent">
             <h2> Filter Options </h2>
-            <form method="get">
+            
                 {% include 'includes/filter.html' %}
                 <button class="btn btn-outline-secondary" type="submit"> Add filter </button>
-            </form>
+            
         </div>
         <div class="col-8">
             {% for article in articles %}
@@ -63,7 +66,7 @@
         </div>
     </div>
 </div>
-
+</form>
 {% include 'includes/paginator.html' %}
 
 
