--- a/project_s/templates/new_simple_articles.html
+++ b/project_s/templates/new_simple_articles.html
@@ -1,23 +1,31 @@
 {% extends 'base.html' %}
-
+{% load widget_tweaks %}
 {% block content %}
 
 
 <div class="container">
     <h1 class="text-justify"> Simplified Articles </h1>
 </div>
+<form method="get">
 <div class="container">
     <div class="row">
         <div class="col-4 bg-transparent">
             <h2> Filter Options </h2>
-            <form method="get">
-                {% include 'includes/filter.html' %}
+            
+                {% include 'includes/simple_filter.html' %}
                 <button class="btn btn-outline-secondary" type="submit"> Add filter </button>
-            </form>
+            
         </div>
         <div class="col-8">
+            <div class="input-group mb-3">
+                {% render_field filter.form.article__name class="form-control" %}
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="submit"> Search </button>
+                </div>
+            </div>
+            
             {% for article in new_simples %}
-            <div class="card bg-transparent mb-2 border-dark" style="max-height: 15rem;">
+            <div class="card bg-transparent mb-2 shadow-lg rounded" style="max-height: 15rem;">
                 <div class="card-header text-justify">
                     <h5><a href="{% url 'Simple_article_detail' article.pk %}"> Simplified: {{article.article.name | truncatechars:50}}</a></h5>
                     <div class="d-flex justify-content-between">
@@ -41,32 +49,12 @@
         </div>
     </div>
 </div>
-
+</form>
 {% include 'includes/paginator.html' %}
 
 
 
 
 
-<!-- <div class="container ">
-    <div class="row justify-content-center">
-        <div class="pagination">
-            <span class="step-links">
-                {% if page_obj.has_previous %}
-                    <a href="?page=1">&laquo; first</a>
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
 
-                <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                {% endif %}
-            </span>
-        </div>
-    </div>
-</div> -->
 {% endblock content %}
